fix(material-experimental/mdc-form-field): properly render notched-outline on the server
Currently, form fields which use the outline appearance and have an
initial value, are not properly rendered on the server. This is because
we don't create the MDC notched-outline component on the server, nor do
we provide the proper initial notched-outline HTML markup. The initial
markup that we render on the server, should include the information that
the notch is initially open.

This is done by adding the `mdc-notched-outline--notched` class based on
the notched-outline `open` state.

No longer relying on the focus/blur to update the notched-outline also
fixes a bug where the label overlaps the closed outline-notch if the
input value changes programmatically.

--- a/src/material-experimental/mdc-form-field/_mdc-text-field-structure-overrides.scss
+++ b/src/material-experimental/mdc-form-field/_mdc-text-field-structure-overrides.scss
@@ -100,7 +100,8 @@
   // the horizontal adjustment for the label is applied through inline styles, and we want to
   // make sure that the label can still float as expected. It should be okay using `!important`
   // because it's unlikely that developers commonly overwrite the floating label transform.
-  .mat-mdc-text-field-wrapper.mdc-text-field--outlined .mdc-floating-label--float-above {
+  .mat-mdc-text-field-wrapper.mdc-text-field--outlined .mdc-notched-outline--upgraded
+  .mdc-floating-label--float-above {
     // This transform has been extracted from the MDC text-field styles. We can't access it
     // through a variable because MDC generates this label transform through a mixin.
     transform: translateY(-$mdc-text-field-outlined-label-position-y) scale(0.75) !important;
